[metadata]
name = reffree
version = 1.0.0
author = Lin Tian
author_email = ltian3@mgh.harvard.edu
description = Reconstruction of Ex Vivo Brain Dissection Photographs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lintian-a/refree
project_urls =
    Bug Tracker = https://github.com/lintian-a/refree
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.9

install_requires = 
    footsteps
    numpy
    torch
    nibabel
    monai
    tensorboard
    tqdm
    h5py

[options.packages.find]
where = src
